--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Anthony Brown</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, minimal-ui">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
